# lens-benchmark

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  README.md  STATUS_REPORT.md  comparison.md  pyproject.toml
v2-synix-benchmark/: AGENT.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
v2-synix-benchmark/docs/: BENCHMARK_SPEC.md  EXECUTION_PLAN.md  SCORING_V2.md
v2-synix-benchmark/docs/plans/: 2026-03-08-modal-infra-and-cache-design.md  2026-03-08-modal-infra-and-cache-impl.md  deferred-memory-strategies.md  memory-strategy-ablation.md  schema-trace-walkthrough.py  synix-capability-requirements.md
v2-synix-benchmark/ops/: DECISIONS.md  RISK_REGISTER.md  RUNBOOK.md  SYNIX_EXECUTION_MODEL.md  SYNIX_UPSTREAM_TRACKER.md  TASK_TEMPLATE.md  WORKBOARD.md  WORKLOG.md
v2-synix-benchmark/ops/tasks/: T000-bootstrap-v2-workspace.md  T001-freeze-v2-benchmark-spec.md  T002-design-manifest-and-event-schemas.md  T003-build-modal-broker-and-cache.md  T004-build-state-store-resume-and-replay.md  T005-implement-artifact-bank-base.md  T006-implement-scoring-v2.md  T007-implement-core-artifact-family.md  T008-implement-summary-artifact-family.md  T009-implement-graph-artifact-family.md  T010-run-smoke-pilot.md  T011-run-feature-screening-study.md  T012-freeze-main-study-and-reporting.md  T013-integrate-synix-runtime-policy-layer.md  T014-refresh-synix-execution-model-tracker.md
v2-synix-benchmark/schemas/: artifact_bank_manifest.example.json  artifact_bank_manifest.schema.json  event.example.json  event.schema.json  policy_manifest.example.json  policy_manifest.schema.json  run_manifest.example.json  run_manifest.schema.json  score_record.example.json  score_record.schema.json  study_manifest.example.json  study_manifest.schema.json
v2-synix-benchmark/src/bench/: agent.py  bank.py  broker.py  cache.py  dataset.py  policy.py  runner.py  runtime.py  schemas.py  scorer.py  state.py  warmup.py
v2-synix-benchmark/src/bench/families/: __init__.py  core.py  core_faceted.py  core_maintained.py  core_structured.py  summary.py
v2-synix-benchmark/studies/grid/: GRID_REPORT.md  JOURNAL.md  analyze_grid.py  extract_and_merge.py  grade.py  grading_rubric.md  run_m3.sh  run_scope.py
v2-synix-benchmark/studies/grid/brief/: RESEARCH_BRIEF.md  build_html.py  research_brief.html  research_brief.tex  statistics.json
v2-synix-benchmark/studies/grid/results/: answers.jsonl  answers_m3.jsonl  answers_new.jsonl  claude_scores.jsonl  claude_scores_expansion.jsonl  claude_scores_m3.jsonl  (+13 more)
v2-synix-benchmark/studies/pilot/: run_pilot.py
v2-synix-benchmark/tests/: conftest.py  test_bank.py  test_broker.py  test_cache.py  test_e2e_smoke.py  test_runtime.py  test_schemas.py  test_scorer.py  test_state.py  test_warmup.py
(+36861 files in other folders)
