[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lens-bench"
version = "0.1.0"
description = "LENS: Longitudinal Evidence-backed Narrative Signals benchmark for agent memory systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "LENS Contributors" }]
keywords = ["benchmark", "memory", "agents", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
scoring = [
    "numpy>=1.26",
]
embedding = [
    "numpy>=1.26",
]
synix = ["synix>=0.10"]
mem0 = ["mem0ai>=0.1"]
zep = ["zep-python>=2.0"]
letta = ["letta>=0.1"]
hyperspell = ["hyperspell>=0.1"]

[project.scripts]
lens = "lens.cli.main:cli"

[project.entry-points."lens.adapters"]

[project.entry-points."lens.metrics"]

[tool.hatch.build.targets.wheel]
packages = ["src/lens"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
