[project]
name = "lens-bench-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "synix>=0.20.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
